Initial javac support for revised option names; initial test updates